# LayZ-Renderer-Engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  LayZ.sln  README.md  VersionPolicy.txt
LayZ/: LayZ  LayZ.vcxproj  LayZ.vcxproj.filters
LayZ/include/: entry.h  lyz.h
LayZ/include/graphics/: camera.h  circle.h  cone.h  cuboid.h  cylinder.h  event.h  graphics.h  instanceRenderer.cpp  instanceRenderer.h  line.h  orthographicCamera.h  oval.h  perspectiveCamera.h  pixelRenderer.h  point.h  pyramid.h  rectangle.h  renderable.h  renderer.h  shader.h  tetrahedron.h  texture.h  triangle.h  window.h
LayZ/include/graphics/buffers/: buffer.h  buffers.h  indexBuffer.h  vertexArray.h  vertexBuffer.h
LayZ/include/math/: lyzm.h  mat4.h  vec2.h  vec3.h  vec4.h
LayZ/include/utils/: debug.h  file.h  processing.h  utils.h
LayZ/src/: event.cpp  event.h  main.cpp  shader.cpp  window.cpp
LayZ/src/graphics/: camera.cpp  circle.cpp  cone.cpp  cuboid.cpp  cylinder.cpp  event.cpp  instanceRenderer.cpp  line.cpp  orthographicCamera.cpp  oval.cpp  perspectiveCamera.cpp  pixelRenderer.cpp  point.cpp  pyramid.cpp  rectangle.cpp  renderable.cpp  renderer.cpp  shader.cpp  tetrahedron.cpp  texture.cpp  triangle.cpp  window.cpp
LayZ/src/graphics/buffers/: buffer.cpp  indexBuffer.cpp  vertexArray.cpp  vertexBuffer.cpp
LayZ/src/math/: CMakeLists.txt  lyzm.cpp  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
LayZ/src/shaders/: fragment.glsl  shader01.glsl  vertex.glsl
LayZ/src/utils/: CMakeLists.txt  debug.cpp  file.cpp  processing.cpp
Libs/GLEW/glew-2.1.0/: compile.bat
Libs/GLEW/glew-2.1.0/lib/: libGLEW.so.2.1.0
